# gamdam-rust

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
src/: addurl_output.rs  annex.rs  blc.rs  cmd.rs  filepath.rs  lib.rs  main.rs  util.rs
src/annex/: addurl.rs  metadata.rs  outputs.rs  registerurl.rs
tests/: cli.rs  ensure_annex_repo.rs
tests/data/: extra-urls.jsonl  metadata.jsonl  mixed-meta.jsonl  simple.jsonl  successful.jsonl
