[package]
name = "gamdam"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
description = "Git-Annex Mass Downloader and Metadata-er"
authors = ["John Thorvald Wodder II <gamdam-rust@varonathe.org>"]
repository = "https://github.com/jwodder/gamdam-rust"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
cfg-if = "1.0.0"
chrono = "0.4.22"
clap = { version = "4.0.18", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
fern = "0.6.1"
futures = "0.3.24"
log = { version = "0.4.17", features = ["std"] }
nix = { version = "0.25.0", default-features = false, features = ["process", "signal"] }
relative-path = { version = "1.7.2", features = ["serde"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
shell-words = "1.1.0"
tokio = { version = "1.21.2", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
tempfile = "3.3.0"
