[package]
name = "gamdam"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
description = "Git-Annex Mass Downloader and Metadata-er"
authors = ["John Thorvald Wodder II <gamdam-rust@varonathe.org>"]
repository = "https://github.com/jwodder/gamdam-rust"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
cfg-if = "1.0.0"
chrono = "0.4.23"
clap = { version = "4.1.1", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
fern = "0.6.1"
futures = "0.3.25"
log = { version = "0.4.17", features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
shell-words = "1.1.0"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
rstest = { version = "0.16.0", default-features = false }
serde-jsonlines = "0.4.0"
tempfile = "3.3.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.1", default-features = false, features = ["process", "signal"] }
