[package]
name = "gamdam"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Git-Annex Mass Downloader and Metadata-er"
authors = ["John Thorvald Wodder II <gamdam-rust@varonathe.org>"]
repository = "https://github.com/jwodder/gamdam-rust"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
cfg-if = "1.0.0"
chrono = "0.4.24"
clap = { version = "4.2.4", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
fern = "0.6.2"
futures = "0.3.28"
indenter = "0.3.3"
log = { version = "0.4.17", features = ["std"] }
patharg = { version = "0.2.0", features = ["tokio"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-jsonlines = { version = "0.4.0", features = ["async"] }
serde_json = "1.0.96"
shell-words = "1.1.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
rstest = { version = "0.17.0", default-features = false }
tempfile = "3.5.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", default-features = false, features = ["process", "signal"] }
